// This file is auto-generated by ``protobuf_builder.py``
// DO NOT EDIT THIS BY HAND!
syntax = "proto3";

package dlkit.proto.hierarchy;

import "dlkit/primordium/id/primitives.proto";
import "dlkit/primordium/locale/primitives.proto";
import "dlkit/primordium/type/primitives.proto";

message Hierarchy {
  dlkit.primordium.locale.primitives.DisplayText description = 1;
  dlkit.primordium.locale.primitives.DisplayText displayName = 2;
  dlkit.primordium.type.primitives.Type genusTypeId = 3;
  dlkit.primordium.id.primitives.Id id = 4;
  repeated dlkit.primordium.type.primitives.Type recordTypeIds = 5;
}

message HierarchyQuery {

}

message HierarchyQueryInspector {

}

message HierarchyForm {

}

message HierarchySearchOrder {

}

message HierarchySearch {

}

message HierarchySearchResults {

}

message HierarchyList {
  repeated Hierarchy hierarchies = 1;
}

message Node {

}

message NodeList {
  repeated Node nodes = 1;
}

message GetHierarchyIdReply {
  dlkit.primordium.id.primitives.Id id = 1;
}

message GetHierarchyIdRequest {

}

message GetHierarchyReply {
  Hierarchy hierarchy = 1;
}

message GetHierarchyRequest {

}

message CanAccessHierarchyReply {
  bool can_access_hierarchy = 1;
}

message CanAccessHierarchyRequest {

}

message GetRootsRequest {

}

message HasParentsReply {
  bool has_parents = 1;
}

message HasParentsRequest {
  dlkit.primordium.id.primitives.Id id_ = 1;
}

message IsParentReply {
  bool is_parent = 1;
}

message IsParentRequest {
  dlkit.primordium.id.primitives.Id id_ = 1;
  dlkit.primordium.id.primitives.Id parent_id = 2;
}

message GetParentsRequest {
  dlkit.primordium.id.primitives.Id id_ = 1;
}

message IsAncestorReply {
  bool is_ancestor = 1;
}

message IsAncestorRequest {
  dlkit.primordium.id.primitives.Id ancestor_id = 1;
  dlkit.primordium.id.primitives.Id id_ = 2;
}

message HasChildrenReply {
  bool has_children = 1;
}

message HasChildrenRequest {
  dlkit.primordium.id.primitives.Id id_ = 1;
}

message IsChildReply {
  bool is_child = 1;
}

message IsChildRequest {
  dlkit.primordium.id.primitives.Id child_id = 1;
  dlkit.primordium.id.primitives.Id id_ = 2;
}

message GetChildrenRequest {
  dlkit.primordium.id.primitives.Id id_ = 1;
}

message IsDescendantReply {
  bool is_descendant = 1;
}

message IsDescendantRequest {
  dlkit.primordium.id.primitives.Id descendant_id = 1;
  dlkit.primordium.id.primitives.Id id_ = 2;
}

message GetNodesReply {
  Node node = 1;
}

message GetNodesRequest {
  sint32 ancestor_levels = 1;
  sint32 descendant_levels = 2;
  dlkit.primordium.id.primitives.Id id_ = 3;
  bool include_siblings = 4;
}

message CanModifyHierarchyReply {
  bool can_modify_hierarchy = 1;
}

message CanModifyHierarchyRequest {

}

message AddRootReply {

}

message AddRootRequest {
  dlkit.primordium.id.primitives.Id id_ = 1;
}

message AddChildReply {

}

message AddChildRequest {
  dlkit.primordium.id.primitives.Id child_id = 1;
  dlkit.primordium.id.primitives.Id id_ = 2;
}

message RemoveRootReply {

}

message RemoveRootRequest {
  dlkit.primordium.id.primitives.Id id_ = 1;
}

message RemoveChildReply {

}

message RemoveChildRequest {
  dlkit.primordium.id.primitives.Id child_id = 1;
  dlkit.primordium.id.primitives.Id id_ = 2;
}

message RemoveChildrenReply {

}

message RemoveChildrenRequest {
  dlkit.primordium.id.primitives.Id id_ = 1;
}

message CanLookupHierarchiesReply {
  bool can_lookup_hierarchies = 1;
}

message CanLookupHierarchiesRequest {

}

message UseComparativeHierarchyViewReply {

}

message UseComparativeHierarchyViewRequest {

}

message UsePlenaryHierarchyViewReply {

}

message UsePlenaryHierarchyViewRequest {

}

message GetHierarchiesByIdsRequest {
  repeated dlkit.primordium.id.primitives.Id hierarchy_ids = 1;
}

message GetHierarchiesByGenusTypeRequest {
  dlkit.primordium.type.primitives.Type hierarchy_genus_type = 1;
}

message GetHierarchiesByParentGenusTypeRequest {
  dlkit.primordium.type.primitives.Type hierarchy_genus_type = 1;
}

message GetHierarchiesByRecordTypeRequest {
  dlkit.primordium.type.primitives.Type hierarchy_record_type = 1;
}

message GetHierarchiesByProviderRequest {
  dlkit.primordium.id.primitives.Id resource_id = 1;
}

message GetHierarchiesRequest {

}

message CanCreateHierarchiesReply {
  bool can_create_hierarchies = 1;
}

message CanCreateHierarchiesRequest {

}

message CanCreateHierarchyWithRecordTypesReply {
  bool can_create_hierarchy_with_record_types = 1;
}

message CanCreateHierarchyWithRecordTypesRequest {
  repeated dlkit.primordium.type.primitives.Type hierarchy_record_types = 1;
}

message GetHierarchyFormForCreateReply {
  HierarchyForm hierarchy_form = 1;
}

message GetHierarchyFormForCreateRequest {
  repeated dlkit.primordium.type.primitives.Type hierarchy_record_types = 1;
}

message CreateHierarchyReply {
  Hierarchy hierarchy = 1;
}

message CreateHierarchyRequest {
  HierarchyForm hierarchy_form = 1;
}

message CanUpdateHierarchiesReply {
  bool can_update_hierarchies = 1;
}

message CanUpdateHierarchiesRequest {

}

message GetHierarchyFormForUpdateReply {
  HierarchyForm hierarchy_form = 1;
}

message GetHierarchyFormForUpdateRequest {
  dlkit.primordium.id.primitives.Id hierarchy_id = 1;
}

message UpdateHierarchyReply {

}

message UpdateHierarchyRequest {
  HierarchyForm hierarchy_form = 1;
}

message CanDeleteHierarchiesReply {
  bool can_delete_hierarchies = 1;
}

message CanDeleteHierarchiesRequest {

}

message DeleteHierarchyReply {

}

message DeleteHierarchyRequest {
  dlkit.primordium.id.primitives.Id hierarchy_id = 1;
}

message CanManageHierarchyAliasesReply {
  bool can_manage_hierarchy_aliases = 1;
}

message CanManageHierarchyAliasesRequest {

}

message AliasHierarchyReply {

}

message AliasHierarchyRequest {
  dlkit.primordium.id.primitives.Id alias_id = 1;
  dlkit.primordium.id.primitives.Id hierarchy_id = 2;
}

service HierarchyTraversalSession {
  rpc GetHierarchyId(GetHierarchyIdRequest) returns (GetHierarchyIdReply) {}
  rpc GetHierarchy(GetHierarchyRequest) returns (GetHierarchyReply) {}
  rpc CanAccessHierarchy(CanAccessHierarchyRequest) returns (CanAccessHierarchyReply) {}
  rpc GetRoots(GetRootsRequest) returns (stream dlkit.primordium.id.primitives.Id) {}
  rpc HasParents(HasParentsRequest) returns (HasParentsReply) {}
  rpc IsParent(IsParentRequest) returns (IsParentReply) {}
  rpc GetParents(GetParentsRequest) returns (stream dlkit.primordium.id.primitives.Id) {}
  rpc IsAncestor(IsAncestorRequest) returns (IsAncestorReply) {}
  rpc HasChildren(HasChildrenRequest) returns (HasChildrenReply) {}
  rpc IsChild(IsChildRequest) returns (IsChildReply) {}
  rpc GetChildren(GetChildrenRequest) returns (stream dlkit.primordium.id.primitives.Id) {}
  rpc IsDescendant(IsDescendantRequest) returns (IsDescendantReply) {}
  rpc GetNodes(GetNodesRequest) returns (GetNodesReply) {}
}

service HierarchyDesignSession {
  rpc GetHierarchyId(GetHierarchyIdRequest) returns (GetHierarchyIdReply) {}
  rpc GetHierarchy(GetHierarchyRequest) returns (GetHierarchyReply) {}
  rpc CanModifyHierarchy(CanModifyHierarchyRequest) returns (CanModifyHierarchyReply) {}
  rpc AddRoot(AddRootRequest) returns (AddRootReply) {}
  rpc AddChild(AddChildRequest) returns (AddChildReply) {}
  rpc RemoveRoot(RemoveRootRequest) returns (RemoveRootReply) {}
  rpc RemoveChild(RemoveChildRequest) returns (RemoveChildReply) {}
  rpc RemoveChildren(RemoveChildrenRequest) returns (RemoveChildrenReply) {}
}

service HierarchyLookupSession {
  rpc CanLookupHierarchies(CanLookupHierarchiesRequest) returns (CanLookupHierarchiesReply) {}
  rpc UseComparativeHierarchyView(UseComparativeHierarchyViewRequest) returns (UseComparativeHierarchyViewReply) {}
  rpc UsePlenaryHierarchyView(UsePlenaryHierarchyViewRequest) returns (UsePlenaryHierarchyViewReply) {}
  rpc GetHierarchy(GetHierarchyRequest) returns (GetHierarchyReply) {}
  rpc GetHierarchiesByIds(GetHierarchiesByIdsRequest) returns (stream Hierarchy) {}
  rpc GetHierarchiesByGenusType(GetHierarchiesByGenusTypeRequest) returns (stream Hierarchy) {}
  rpc GetHierarchiesByParentGenusType(GetHierarchiesByParentGenusTypeRequest) returns (stream Hierarchy) {}
  rpc GetHierarchiesByRecordType(GetHierarchiesByRecordTypeRequest) returns (stream Hierarchy) {}
  rpc GetHierarchiesByProvider(GetHierarchiesByProviderRequest) returns (stream Hierarchy) {}
  rpc GetHierarchies(GetHierarchiesRequest) returns (stream Hierarchy) {}
}

service HierarchyAdminSession {
  rpc CanCreateHierarchies(CanCreateHierarchiesRequest) returns (CanCreateHierarchiesReply) {}
  rpc CanCreateHierarchyWithRecordTypes(CanCreateHierarchyWithRecordTypesRequest) returns (CanCreateHierarchyWithRecordTypesReply) {}
  rpc GetHierarchyFormForCreate(GetHierarchyFormForCreateRequest) returns (GetHierarchyFormForCreateReply) {}
  rpc CreateHierarchy(CreateHierarchyRequest) returns (CreateHierarchyReply) {}
  rpc CanUpdateHierarchies(CanUpdateHierarchiesRequest) returns (CanUpdateHierarchiesReply) {}
  rpc GetHierarchyFormForUpdate(GetHierarchyFormForUpdateRequest) returns (GetHierarchyFormForUpdateReply) {}
  rpc UpdateHierarchy(UpdateHierarchyRequest) returns (UpdateHierarchyReply) {}
  rpc CanDeleteHierarchies(CanDeleteHierarchiesRequest) returns (CanDeleteHierarchiesReply) {}
  rpc DeleteHierarchy(DeleteHierarchyRequest) returns (DeleteHierarchyReply) {}
  rpc CanManageHierarchyAliases(CanManageHierarchyAliasesRequest) returns (CanManageHierarchyAliasesReply) {}
  rpc AliasHierarchy(AliasHierarchyRequest) returns (AliasHierarchyReply) {}
}